Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-15593

[C++] An unhandled race condition exists in ThreadPool

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 7.0.0
    • 7.0.2, 8.0.0
    • C++
    • linux

    Description

      A race condition exists at the ThreadPool which may lead to the loss of pending tasks after a process forks. 

      See this issue for more detail: https://github.com/apache/arrow/issues/12329

      Attachments

        Activity

          People

            apitrou Antoine Pitrou
            framlog Huxley Hu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 6h 20m
                6h 20m