ARROW-15593: [C++] fixes a race condition in the thread pool

Test Plan: Manually