cpp/src/arrow/util/thread_pool.h
@@ -21,6 +21,7 @@
 #include <unistd.h>
 #endif
 
+#include <atomic>
 #include <cstdint>
 #include <memory>
 #include <queue>
@@ -373,7 +374,7 @@ class ARROW_EXPORT ThreadPool : public Executor {
   State* state_;
   bool shutdown_on_destroy_;
 #ifndef _WIN32
-  pid_t pid_;
+  std::atomic<pid_t> pid_;
 #endif
 };
 
